--- a/examples/dataloading.ipynb
+++ b/examples/dataloading.ipynb
@@ -177,9 +177,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 14)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ts</th><th>prc_s0_BTCUSDT</th><th>prc_s1_BTCUSDT</th><th>vol_s0_BTCUSDT</th><th>vol_s1_BTCUSDT</th><th>prc_s0_ETHUSDT</th><th>prc_s1_ETHUSDT</th><th>vol_s0_ETHUSDT</th><th>vol_s1_ETHUSDT</th><th>dts</th><th>mid_BTCUSDT</th><th>mid_ETHUSDT</th><th>random_signal</th><th>pnl_sig_1m</th></tr><tr><td>i64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>datetime[ns]</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>1737331260001000000</td><td>100950.2</td><td>100950.5</td><td>0.001</td><td>0.74</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.001</td><td>100950.35</td><td>3201.17</td><td>1.0</td><td>-4.36</td></tr><tr><td>1737331260005000000</td><td>100949.8</td><td>100950.5</td><td>0.019</td><td>0.74</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.005</td><td>100950.15</td><td>3201.17</td><td>-1.0</td><td>4.36</td></tr><tr><td>1737331260007000000</td><td>100949.8</td><td>100950.5</td><td>0.019</td><td>0.469</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.007</td><td>100950.15</td><td>3201.17</td><td>-1.0</td><td>4.36</td></tr><tr><td>1737331260008000000</td><td>100943.3</td><td>100945.3</td><td>0.002</td><td>0.001</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.008</td><td>100944.3</td><td>3201.17</td><td>-1.0</td><td>4.36</td></tr><tr><td>1737331260017000000</td><td>100943.3</td><td>100945.3</td><td>0.002</td><td>0.001</td><td>3201.16</td><td>3201.17</td><td>0.049</td><td>0.9</td><td>2025-01-20 00:01:00.017</td><td>100944.3</td><td>3201.165</td><td>-1.0</td><td>4.36</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 14)\n",
+       "┌───────────┬───────────┬───────────┬───────────┬───┬───────────┬───────────┬───────────┬──────────┐\n",
+       "│ ts        ┆ prc_s0_BT ┆ prc_s1_BT ┆ vol_s0_BT ┆ … ┆ mid_BTCUS ┆ mid_ETHUS ┆ random_si ┆ pnl_sig_ │\n",
+       "│ ---       ┆ CUSDT     ┆ CUSDT     ┆ CUSDT     ┆   ┆ DT        ┆ DT        ┆ gnal      ┆ 1m       │\n",
+       "│ i64       ┆ ---       ┆ ---       ┆ ---       ┆   ┆ ---       ┆ ---       ┆ ---       ┆ ---      │\n",
+       "│           ┆ f64       ┆ f64       ┆ f64       ┆   ┆ f64       ┆ f64       ┆ f64       ┆ f64      │\n",
+       "╞═══════════╪═══════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪═══════════╪══════════╡\n",
+       "│ 173733126 ┆ 100950.2  ┆ 100950.5  ┆ 0.001     ┆ … ┆ 100950.35 ┆ 3201.17   ┆ 1.0       ┆ -4.36    │\n",
+       "│ 000100000 ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 173733126 ┆ 100949.8  ┆ 100950.5  ┆ 0.019     ┆ … ┆ 100950.15 ┆ 3201.17   ┆ -1.0      ┆ 4.36     │\n",
+       "│ 000500000 ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 173733126 ┆ 100949.8  ┆ 100950.5  ┆ 0.019     ┆ … ┆ 100950.15 ┆ 3201.17   ┆ -1.0      ┆ 4.36     │\n",
+       "│ 000700000 ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 173733126 ┆ 100943.3  ┆ 100945.3  ┆ 0.002     ┆ … ┆ 100944.3  ┆ 3201.17   ┆ -1.0      ┆ 4.36     │\n",
+       "│ 000800000 ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 173733126 ┆ 100943.3  ┆ 100945.3  ┆ 0.002     ┆ … ┆ 100944.3  ┆ 3201.165  ┆ -1.0      ┆ 4.36     │\n",
+       "│ 001700000 ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pdf = df.target.add_sig_pnl(ts_col=\"ts\", col=\"mid_ETHUSDT\", signal=\"random_signal\", horizon=\"1m\", in_bp=False)\n",
     "pdf.head()"
@@ -194,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,9 +258,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ts</th><th>prc</th><th>product</th><th>trade_id</th><th>qty</th><th>side</th><th>dts</th></tr><tr><td>i64</td><td>f64</td><td>str</td><td>i64</td><td>f64</td><td>i32</td><td>datetime[ns]</td></tr></thead><tbody><tr><td>1735725600175000000</td><td>3333.63</td><td>&quot;ETHUSDT&quot;</td><td>4937545734</td><td>-0.086</td><td>-1</td><td>2025-01-01 10:00:00.175</td></tr><tr><td>1735725600242000000</td><td>3333.64</td><td>&quot;ETHUSDT&quot;</td><td>4937545735</td><td>0.543</td><td>1</td><td>2025-01-01 10:00:00.242</td></tr><tr><td>1735725600340000000</td><td>3333.64</td><td>&quot;ETHUSDT&quot;</td><td>4937545738</td><td>0.015</td><td>1</td><td>2025-01-01 10:00:00.340</td></tr><tr><td>1735725600353000000</td><td>93382.1</td><td>&quot;BTCUSDT&quot;</td><td>5793674893</td><td>0.036</td><td>1</td><td>2025-01-01 10:00:00.353</td></tr><tr><td>1735725600393000000</td><td>3333.63</td><td>&quot;ETHUSDT&quot;</td><td>4937545740</td><td>-8.023</td><td>-1</td><td>2025-01-01 10:00:00.393</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 7)\n",
+       "┌─────────────────────┬─────────┬─────────┬────────────┬────────┬──────┬─────────────────────────┐\n",
+       "│ ts                  ┆ prc     ┆ product ┆ trade_id   ┆ qty    ┆ side ┆ dts                     │\n",
+       "│ ---                 ┆ ---     ┆ ---     ┆ ---        ┆ ---    ┆ ---  ┆ ---                     │\n",
+       "│ i64                 ┆ f64     ┆ str     ┆ i64        ┆ f64    ┆ i32  ┆ datetime[ns]            │\n",
+       "╞═════════════════════╪═════════╪═════════╪════════════╪════════╪══════╪═════════════════════════╡\n",
+       "│ 1735725600175000000 ┆ 3333.63 ┆ ETHUSDT ┆ 4937545734 ┆ -0.086 ┆ -1   ┆ 2025-01-01 10:00:00.175 │\n",
+       "│ 1735725600242000000 ┆ 3333.64 ┆ ETHUSDT ┆ 4937545735 ┆ 0.543  ┆ 1    ┆ 2025-01-01 10:00:00.242 │\n",
+       "│ 1735725600340000000 ┆ 3333.64 ┆ ETHUSDT ┆ 4937545738 ┆ 0.015  ┆ 1    ┆ 2025-01-01 10:00:00.340 │\n",
+       "│ 1735725600353000000 ┆ 93382.1 ┆ BTCUSDT ┆ 5793674893 ┆ 0.036  ┆ 1    ┆ 2025-01-01 10:00:00.353 │\n",
+       "│ 1735725600393000000 ┆ 3333.63 ┆ ETHUSDT ┆ 4937545740 ┆ -8.023 ┆ -1   ┆ 2025-01-01 10:00:00.393 │\n",
+       "└─────────────────────┴─────────┴─────────┴────────────┴────────┴──────┴─────────────────────────┘"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tdf = tdf.collect()\n",
     "tdf.head()"
@@ -232,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,20 +316,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (10, 8)\n",
+      "┌────────────┬────────────┬────────────┬────────────┬────────────┬────────────┬───────────┬────────┐\n",
+      "│ ts         ┆ mid_BTCUSD ┆ mid_ETHUSD ┆ pos_BTCUSD ┆ pos_ETHUSD ┆ pnl_BTCUSD ┆ pnl_ETHUS ┆ pnl    │\n",
+      "│ ---        ┆ T          ┆ T          ┆ T          ┆ T          ┆ T          ┆ DT        ┆ ---    │\n",
+      "│ datetime[μ ┆ ---        ┆ ---        ┆ ---        ┆ ---        ┆ ---        ┆ ---       ┆ f64    │\n",
+      "│ s]         ┆ f64        ┆ f64        ┆ f64        ┆ f64        ┆ f64        ┆ f64       ┆        │\n",
+      "╞════════════╪════════════╪════════════╪════════════╪════════════╪════════════╪═══════════╪════════╡\n",
+      "│ 2023-01-01 ┆ 100.0      ┆ 50.0       ┆ 1.0        ┆ 0.5        ┆ -0.02      ┆ 0.0       ┆ -0.02  │\n",
+      "│ 00:00:00   ┆            ┆            ┆            ┆            ┆            ┆           ┆        │\n",
+      "│ 2023-01-01 ┆ 101.0      ┆ 50.5       ┆ 0.5        ┆ -0.5       ┆ 0.9699     ┆ 0.25      ┆ 1.2199 │\n",
+      "│ 00:00:01   ┆            ┆            ┆            ┆            ┆            ┆           ┆        │\n",
+      "│ 2023-01-01 ┆ 102.0      ┆ 51.0       ┆ -1.0       ┆ 1.5        ┆ 2.4495     ┆ 0.25      ┆ 2.6995 │\n",
+      "│ 00:00:02   ┆            ┆            ┆            ┆            ┆            ┆           ┆        │\n",
+      "│ 2023-01-01 ┆ 101.5      ┆ 51.5       ┆ 0.0        ┆ -1.0       ┆ 2.1995     ┆ 1.0       ┆ 3.1995 │\n",
+      "│ 00:00:03   ┆            ┆            ┆            ┆            ┆            ┆           ┆        │\n",
+      "│ 2023-01-01 ┆ 101.0      ┆ 52.0       ┆ -0.5       ┆ 0.5        ┆ 1.9394     ┆ 1.25      ┆ 3.1894 │\n",
+      "│ 00:00:04   ┆            ┆            ┆            ┆            ┆            ┆           ┆        │\n",
+      "│ 2023-01-01 ┆ 100.5      ┆ 51.5       ┆ 1.0        ┆ -0.5       ┆ 1.9193     ┆ 0.75      ┆ 2.6693 │\n",
+      "│ 00:00:05   ┆            ┆            ┆            ┆            ┆            ┆           ┆        │\n",
+      "│ 2023-01-01 ┆ 100.0      ┆ 51.0       ┆ 0.0        ┆ 1.0        ┆ 1.4193     ┆ 0.5       ┆ 1.9193 │\n",
+      "│ 00:00:06   ┆            ┆            ┆            ┆            ┆            ┆           ┆        │\n",
+      "│ 2023-01-01 ┆ 101.0      ┆ 52.0       ┆ 2.0        ┆ -1.0       ┆ 2.3789     ┆ 2.0       ┆ 4.3789 │\n",
+      "│ 00:00:07   ┆            ┆            ┆            ┆            ┆            ┆           ┆        │\n",
+      "│ 2023-01-01 ┆ 102.0      ┆ 53.0       ┆ -1.5       ┆ 0.5        ┆ 5.3483     ┆ 2.5       ┆ 7.8483 │\n",
+      "│ 00:00:08   ┆            ┆            ┆            ┆            ┆            ┆           ┆        │\n",
+      "│ 2023-01-01 ┆ 103.0      ┆ 52.5       ┆ 1.0        ┆ -0.5       ┆ 6.8277     ┆ 2.0       ┆ 8.8277 │\n",
+      "│ 00:00:09   ┆            ┆            ┆            ┆            ┆            ┆           ┆        │\n",
+      "└────────────┴────────────┴────────────┴────────────┴────────────┴────────────┴───────────┴────────┘\n"
+     ]
+    }
+   ],
    "source": [
     "df = create_test_positions_data()\n",
     "print(df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
