Another README update

--- a/examples/bybit-connect.ipynb
+++ b/examples/bybit-connect.ipynb
@@ -37,7 +37,7 @@
    "id": "47181fcf-e826-4fdc-9620-9d171f6480cb",
    "metadata": {},
    "source": [
-    "# <font color=\"grey\">ByBit API</font>"
+    "# <font color=\"grey\">Simple ByBit API</font>"
    ]
   },
   {
