--- a/examples/dataloading.ipynb
+++ b/examples/dataloading.ipynb
@@ -190,7 +190,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 14)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ts</th><th>prc_s0_BTCUSDT</th><th>prc_s1_BTCUSDT</th><th>vol_s0_BTCUSDT</th><th>vol_s1_BTCUSDT</th><th>prc_s0_ETHUSDT</th><th>prc_s1_ETHUSDT</th><th>vol_s0_ETHUSDT</th><th>vol_s1_ETHUSDT</th><th>dts</th><th>mid_BTCUSDT</th><th>mid_ETHUSDT</th><th>random_signal</th><th>pnl_sig_1m</th></tr><tr><td>i64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>datetime[ns]</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>1737331260001000000</td><td>100950.2</td><td>100950.5</td><td>0.001</td><td>0.74</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.001</td><td>100950.35</td><td>3201.17</td><td>1.0</td><td>-4.36</td></tr><tr><td>1737331260005000000</td><td>100949.8</td><td>100950.5</td><td>0.019</td><td>0.74</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.005</td><td>100950.15</td><td>3201.17</td><td>-1.0</td><td>4.36</td></tr><tr><td>1737331260007000000</td><td>100949.8</td><td>100950.5</td><td>0.019</td><td>0.469</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.007</td><td>100950.15</td><td>3201.17</td><td>-1.0</td><td>4.36</td></tr><tr><td>1737331260008000000</td><td>100943.3</td><td>100945.3</td><td>0.002</td><td>0.001</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.008</td><td>100944.3</td><td>3201.17</td><td>-1.0</td><td>4.36</td></tr><tr><td>1737331260017000000</td><td>100943.3</td><td>100945.3</td><td>0.002</td><td>0.001</td><td>3201.16</td><td>3201.17</td><td>0.049</td><td>0.9</td><td>2025-01-20 00:01:00.017</td><td>100944.3</td><td>3201.165</td><td>-1.0</td><td>4.36</td></tr></tbody></table></div>"
+       "<small>shape: (5, 14)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ts</th><th>prc_s0_BTCUSDT</th><th>prc_s1_BTCUSDT</th><th>vol_s0_BTCUSDT</th><th>vol_s1_BTCUSDT</th><th>prc_s0_ETHUSDT</th><th>prc_s1_ETHUSDT</th><th>vol_s0_ETHUSDT</th><th>vol_s1_ETHUSDT</th><th>dts</th><th>mid_BTCUSDT</th><th>mid_ETHUSDT</th><th>random_signal</th><th>pnl_sig_1m</th></tr><tr><td>i64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>datetime[ns]</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>1737331260001000000</td><td>100950.2</td><td>100950.5</td><td>0.001</td><td>0.74</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.001</td><td>100950.35</td><td>3201.17</td><td>1.0</td><td>-4.36</td></tr><tr><td>1737331260005000000</td><td>100949.8</td><td>100950.5</td><td>0.019</td><td>0.74</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.005</td><td>100950.15</td><td>3201.17</td><td>-1.0</td><td>4.36</td></tr><tr><td>1737331260007000000</td><td>100949.8</td><td>100950.5</td><td>0.019</td><td>0.469</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.007</td><td>100950.15</td><td>3201.17</td><td>1.0</td><td>-4.36</td></tr><tr><td>1737331260008000000</td><td>100943.3</td><td>100945.3</td><td>0.002</td><td>0.001</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.008</td><td>100944.3</td><td>3201.17</td><td>-1.0</td><td>4.36</td></tr><tr><td>1737331260017000000</td><td>100943.3</td><td>100945.3</td><td>0.002</td><td>0.001</td><td>3201.16</td><td>3201.17</td><td>0.049</td><td>0.9</td><td>2025-01-20 00:01:00.017</td><td>100944.3</td><td>3201.165</td><td>1.0</td><td>-4.36</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 14)\n",
@@ -206,13 +206,13 @@
        "│ 173733126 ┆ 100949.8  ┆ 100950.5  ┆ 0.019     ┆ … ┆ 100950.15 ┆ 3201.17   ┆ -1.0      ┆ 4.36     │\n",
        "│ 000500000 ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
-       "│ 173733126 ┆ 100949.8  ┆ 100950.5  ┆ 0.019     ┆ … ┆ 100950.15 ┆ 3201.17   ┆ -1.0      ┆ 4.36     │\n",
+       "│ 173733126 ┆ 100949.8  ┆ 100950.5  ┆ 0.019     ┆ … ┆ 100950.15 ┆ 3201.17   ┆ 1.0       ┆ -4.36    │\n",
        "│ 000700000 ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "│ 173733126 ┆ 100943.3  ┆ 100945.3  ┆ 0.002     ┆ … ┆ 100944.3  ┆ 3201.17   ┆ -1.0      ┆ 4.36     │\n",
        "│ 000800000 ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
-       "│ 173733126 ┆ 100943.3  ┆ 100945.3  ┆ 0.002     ┆ … ┆ 100944.3  ┆ 3201.165  ┆ -1.0      ┆ 4.36     │\n",
+       "│ 173733126 ┆ 100943.3  ┆ 100945.3  ┆ 0.002     ┆ … ┆ 100944.3  ┆ 3201.165  ┆ 1.0       ┆ -4.36    │\n",
        "│ 001700000 ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "│ 0         ┆           ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
@@ -357,6 +357,55 @@
    "source": [
     "df = create_test_positions_data()\n",
     "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  <a id='chapter4'> <font color=\"grey\">4. Fixed-frequency data</font></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ts</th><th>mid_BTCUSDT</th><th>mid_ETHUSDT</th></tr><tr><td>datetime[ns]</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>2025-01-01 10:00:01</td><td>93382.05</td><td>3333.445</td></tr><tr><td>2025-01-01 10:00:02</td><td>93382.05</td><td>3333.445</td></tr><tr><td>2025-01-01 10:00:03</td><td>93382.05</td><td>3333.065</td></tr><tr><td>2025-01-01 10:00:04</td><td>93382.05</td><td>3333.045</td></tr><tr><td>2025-01-01 10:00:05</td><td>93387.75</td><td>3333.355</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 3)\n",
+       "┌─────────────────────┬─────────────┬─────────────┐\n",
+       "│ ts                  ┆ mid_BTCUSDT ┆ mid_ETHUSDT │\n",
+       "│ ---                 ┆ ---         ┆ ---         │\n",
+       "│ datetime[ns]        ┆ f64         ┆ f64         │\n",
+       "╞═════════════════════╪═════════════╪═════════════╡\n",
+       "│ 2025-01-01 10:00:01 ┆ 93382.05    ┆ 3333.445    │\n",
+       "│ 2025-01-01 10:00:02 ┆ 93382.05    ┆ 3333.445    │\n",
+       "│ 2025-01-01 10:00:03 ┆ 93382.05    ┆ 3333.065    │\n",
+       "│ 2025-01-01 10:00:04 ┆ 93382.05    ┆ 3333.045    │\n",
+       "│ 2025-01-01 10:00:05 ┆ 93387.75    ┆ 3333.355    │\n",
+       "└─────────────────────┴─────────────┴─────────────┘"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = dl.load(products, TIMES, freq=\"1s\")\n",
+    "df.head()"
    ]
   }
  ],
