--- a/examples/dataloading.ipynb
+++ b/examples/dataloading.ipynb
@@ -100,7 +100,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 12)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ts</th><th>prc_s0_BTCUSDT</th><th>prc_s1_BTCUSDT</th><th>vol_s0_BTCUSDT</th><th>vol_s1_BTCUSDT</th><th>prc_s0_ETHUSDT</th><th>prc_s1_ETHUSDT</th><th>vol_s0_ETHUSDT</th><th>vol_s1_ETHUSDT</th><th>dts</th><th>mid_BTCUSDT</th><th>mid_ETHUSDT</th></tr><tr><td>i64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>datetime[ns]</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>1737331260001000000</td><td>100950.2</td><td>100950.5</td><td>0.001</td><td>0.74</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.001</td><td>100950.35</td><td>3201.17</td></tr><tr><td>1737331260005000000</td><td>100949.8</td><td>100950.5</td><td>0.019</td><td>0.74</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.005</td><td>100950.15</td><td>3201.17</td></tr><tr><td>1737331260007000000</td><td>100949.8</td><td>100950.5</td><td>0.019</td><td>0.469</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.007</td><td>100950.15</td><td>3201.17</td></tr><tr><td>1737331260008000000</td><td>100943.3</td><td>100945.3</td><td>0.002</td><td>0.001</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.008</td><td>100944.3</td><td>3201.17</td></tr><tr><td>1737331260017000000</td><td>100943.3</td><td>100945.3</td><td>0.002</td><td>0.001</td><td>3201.16</td><td>3201.17</td><td>0.049</td><td>0.9</td><td>2025-01-20 00:01:00.017</td><td>100944.3</td><td>3201.165</td></tr></tbody></table></div>"
+       "<small>shape: (5, 12)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>ts</th><th>prc_s0_BTCUSDT</th><th>prc_s1_BTCUSDT</th><th>vol_s0_BTCUSDT</th><th>vol_s1_BTCUSDT</th><th>prc_s0_ETHUSDT</th><th>prc_s1_ETHUSDT</th><th>vol_s0_ETHUSDT</th><th>vol_s1_ETHUSDT</th><th>dts</th><th>mid_BTCUSDT</th><th>mid_ETHUSDT</th></tr><tr><td>i64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>datetime[ns]</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>1737331260001500000</td><td>100950.2</td><td>100950.5</td><td>0.001</td><td>0.74</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.001500</td><td>100950.35</td><td>3201.17</td></tr><tr><td>1737331260005500000</td><td>100949.8</td><td>100950.5</td><td>0.019</td><td>0.74</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.005500</td><td>100950.15</td><td>3201.17</td></tr><tr><td>1737331260007500000</td><td>100949.8</td><td>100950.5</td><td>0.019</td><td>0.469</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.007500</td><td>100950.15</td><td>3201.17</td></tr><tr><td>1737331260008500000</td><td>100943.3</td><td>100945.3</td><td>0.002</td><td>0.001</td><td>3201.16</td><td>3201.18</td><td>0.049</td><td>13.713</td><td>2025-01-20 00:01:00.008500</td><td>100944.3</td><td>3201.17</td></tr><tr><td>1737331260017500000</td><td>100943.3</td><td>100945.3</td><td>0.002</td><td>0.001</td><td>3201.16</td><td>3201.17</td><td>0.049</td><td>0.9</td><td>2025-01-20 00:01:00.017500</td><td>100944.3</td><td>3201.165</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 12)\n",
@@ -111,20 +111,20 @@
        "│           ┆ f64       ┆ f64       ┆ f64       ┆   ┆ f64       ┆ ns]       ┆ f64       ┆ f64      │\n",
        "╞═══════════╪═══════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪═══════════╪══════════╡\n",
        "│ 173733126 ┆ 100950.2  ┆ 100950.5  ┆ 0.001     ┆ … ┆ 13.713    ┆ 2025-01-2 ┆ 100950.35 ┆ 3201.17  │\n",
-       "│ 000100000 ┆           ┆           ┆           ┆   ┆           ┆ 0 00:01:0 ┆           ┆          │\n",
-       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆ 0.001     ┆           ┆          │\n",
+       "│ 000150000 ┆           ┆           ┆           ┆   ┆           ┆ 0 00:01:0 ┆           ┆          │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆ 0.001500  ┆           ┆          │\n",
        "│ 173733126 ┆ 100949.8  ┆ 100950.5  ┆ 0.019     ┆ … ┆ 13.713    ┆ 2025-01-2 ┆ 100950.15 ┆ 3201.17  │\n",
-       "│ 000500000 ┆           ┆           ┆           ┆   ┆           ┆ 0 00:01:0 ┆           ┆          │\n",
-       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆ 0.005     ┆           ┆          │\n",
+       "│ 000550000 ┆           ┆           ┆           ┆   ┆           ┆ 0 00:01:0 ┆           ┆          │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆ 0.005500  ┆           ┆          │\n",
        "│ 173733126 ┆ 100949.8  ┆ 100950.5  ┆ 0.019     ┆ … ┆ 13.713    ┆ 2025-01-2 ┆ 100950.15 ┆ 3201.17  │\n",
-       "│ 000700000 ┆           ┆           ┆           ┆   ┆           ┆ 0 00:01:0 ┆           ┆          │\n",
-       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆ 0.007     ┆           ┆          │\n",
+       "│ 000750000 ┆           ┆           ┆           ┆   ┆           ┆ 0 00:01:0 ┆           ┆          │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆ 0.007500  ┆           ┆          │\n",
        "│ 173733126 ┆ 100943.3  ┆ 100945.3  ┆ 0.002     ┆ … ┆ 13.713    ┆ 2025-01-2 ┆ 100944.3  ┆ 3201.17  │\n",
-       "│ 000800000 ┆           ┆           ┆           ┆   ┆           ┆ 0 00:01:0 ┆           ┆          │\n",
-       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆ 0.008     ┆           ┆          │\n",
+       "│ 000850000 ┆           ┆           ┆           ┆   ┆           ┆ 0 00:01:0 ┆           ┆          │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆ 0.008500  ┆           ┆          │\n",
        "│ 173733126 ┆ 100943.3  ┆ 100945.3  ┆ 0.002     ┆ … ┆ 0.9       ┆ 2025-01-2 ┆ 100944.3  ┆ 3201.165 │\n",
-       "│ 001700000 ┆           ┆           ┆           ┆   ┆           ┆ 0 00:01:0 ┆           ┆          │\n",
-       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆ 0.017     ┆           ┆          │\n",
+       "│ 001750000 ┆           ┆           ┆           ┆   ┆           ┆ 0 00:01:0 ┆           ┆          │\n",
+       "│ 0         ┆           ┆           ┆           ┆   ┆           ┆ 0.017500  ┆           ┆          │\n",
        "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
       ]
      },
@@ -595,7 +595,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
