Improved formatting in hdb

--- a/examples/dataloading.ipynb
+++ b/examples/dataloading.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt # type: ignore"
+    "import matplotlib.pyplot as plt  # type: ignore"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "RCS = [f\"{coin}USDT\" for coin in [\"BTC\", \"ETH\", \"XRP\", \"SOL\", \"DOGE\"]]\n",
-    "TIMES = ['250615.000100', '250624.215000']"
+    "TIMES = [\"250615.000100\", \"250624.215000\"]"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dl.load_book(\"BTCUSDT\", TIMES, depth=10)\n"
+    "df = dl.load_book(\"BTCUSDT\", TIMES, depth=10)"
    ]
   },
   {
@@ -152,7 +152,7 @@
    ],
    "source": [
     "# Add human readable timestamp and mid prices\n",
-    "df = df.ds.add_datetime('ts')\n",
+    "df = df.ds.add_datetime(\"ts\")\n",
     "df.head()"
    ]
   },
@@ -173,10 +173,10 @@
     }
    ],
    "source": [
-    "plt.plot(df['dts'], df['asks[0].price'], df['dts'], df['bids[0].price'])\n",
-    "plt.xlabel('Time')\n",
-    "plt.ylabel('Bid and ask prices')\n",
-    "plt.title(f'{RCS[0]}')\n",
+    "plt.plot(df[\"dts\"], df[\"asks[0].price\"], df[\"dts\"], df[\"bids[0].price\"])\n",
+    "plt.xlabel(\"Time\")\n",
+    "plt.ylabel(\"Bid and ask prices\")\n",
+    "plt.title(f\"{RCS[0]}\")\n",
     "plt.show()"
    ]
   },
@@ -198,14 +198,14 @@
    ],
    "source": [
     "df = dl.load_book(\"BTCUSDT\", [\"250605.120000\", \"250605.130000\"], depth=1)\n",
-    "df = df.ds.add_datetime('ts')\n",
-    "fig, ax = plt.subplots(1,2, figsize=(12,6))\n",
-    "ax[0].plot(df['dts'], df['asks[0].price'], df['dts'], df['bids[0].price'])\n",
-    "ax[1].plot(df['dts'], df['asks[0].price'] - df['bids[0].price'])\n",
-    "ax[0].set_xlabel('Time')\n",
-    "ax[0].set_ylabel('Prices')\n",
-    "ax[1].set_xlabel('Time')\n",
-    "ax[1].set_ylabel('Bid-ask spread')\n",
+    "df = df.ds.add_datetime(\"ts\")\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(12, 6))\n",
+    "ax[0].plot(df[\"dts\"], df[\"asks[0].price\"], df[\"dts\"], df[\"bids[0].price\"])\n",
+    "ax[1].plot(df[\"dts\"], df[\"asks[0].price\"] - df[\"bids[0].price\"])\n",
+    "ax[0].set_xlabel(\"Time\")\n",
+    "ax[0].set_ylabel(\"Prices\")\n",
+    "ax[1].set_xlabel(\"Time\")\n",
+    "ax[1].set_ylabel(\"Bid-ask spread\")\n",
     "plt.show()"
    ]
   },
@@ -222,7 +222,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dl.load_bar([\"BTCUSDT\", \"ETHUSDT\"], [\"250605.120000\", \"250605.150000\"], col=\"mid\", freq=\"1s\")"
+    "df = dl.load_bar(\n",
+    "    [\"BTCUSDT\", \"ETHUSDT\"], [\"250605.120000\", \"250605.150000\"], col=\"mid\", freq=\"1s\"\n",
+    ")"
    ]
   },
   {
@@ -283,7 +285,7 @@
     }
    ],
    "source": [
-    "plt.plot(df['ts'], df['mid_BTCUSDT'])\n",
+    "plt.plot(df[\"ts\"], df[\"mid_BTCUSDT\"])\n",
     "plt.show()"
    ]
   }
