--- a/examples/trading.ipynb
+++ b/examples/trading.ipynb
@@ -17,9 +17,7 @@
    "id": "703f85d7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import os"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -85,9 +83,11 @@
     "print(f\"Best ask for BTCUSDT: {bybit.get_ask('BTCUSDT')}\")\n",
     "print(f\"Best bid for BTCUSDT: {bybit.get_bid('BTCUSDT')}\")\n",
     "print(f\"Best ask for BTCUSDT: {bybit.get_ask('BTCUSDT')}\")\n",
-    "trades = bybit.get_trades('BTCUSDT')[0]\n",
-    "print(f\"Trades for BTCUSDT at time {trades['ts']}: {trades['price']} {trades['qty']} {trades['side']}\")\n",
-    "print(f\"Latency for BTCUSDT: {bybit.get_latency('BTCUSDT')}\")\n"
+    "trades = bybit.get_trades(\"BTCUSDT\")[0]\n",
+    "print(\n",
+    "    f\"Trades for BTCUSDT at time {trades['ts']}: {trades['price']} {trades['qty']} {trades['side']}\"\n",
+    ")\n",
+    "print(f\"Latency for BTCUSDT: {bybit.get_latency('BTCUSDT')}\")"
    ]
   },
   {
@@ -183,7 +183,7 @@
     }
    ],
    "source": [
-    "trades = bybit.get_pnl('ETHUSDT')\n",
+    "trades = bybit.get_pnl(\"ETHUSDT\")\n",
     "trades"
    ]
   },
@@ -207,7 +207,7 @@
    ],
    "source": [
     "# Test market order\n",
-    "price = bybit.get_ask('ETHUSDT')\n"
+    "price = bybit.get_ask(\"ETHUSDT\")"
    ]
   },
   {
